--- a/src/app/share/header/header.component.html
+++ b/src/app/share/header/header.component.html
@@ -1,5 +1,7 @@
 <header class="header">
-    <mat-toolbar color="primary">
-        <span>Foosball Table / {{title}}</span>
+    <mat-toolbar color="">
+        <span>{{title}}</span>
+        <span class="spacer"></span>
+        <ng-content></ng-content>
     </mat-toolbar>
 </header>
