--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,15 @@
 @import "~reset-css/_reset.scss";
 @import "~bootstrap/scss/bootstrap-grid.scss";
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
+.player-card {
+  height: 100%;
+}
+
+.player-card-container {
+  margin-bottom: 30px;
+}
+
+.content-spacer {
+  margin-top: 70px;
+}
