--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,3 +13,11 @@
 .content-spacer {
   margin-top: 70px;
 }
+
+.mat-card-header-text {
+  width: 100%;
+}
+
+.mat-card-title {
+  font-size: 15px;
+}
