--- a/src/app/ui/player-details/player-details/player-details.component.html
+++ b/src/app/ui/player-details/player-details/player-details.component.html
@@ -1,7 +1,7 @@
 <foosball-header [title]="'Player Details'">
     <button mat-raised-button [routerLink]="['/players']" >Back</button>
 </foosball-header>
-<div class="container-fluid content-spacer">
+<div class="container-fluid content-spacer" [@enterAnimation]>
     <div class="row">
         <div class="col-12">
             <mat-card class="player-card" *ngIf="player">
