--- a/src/app/ui/players/players/players.component.html
+++ b/src/app/ui/players/players/players.component.html
@@ -3,7 +3,7 @@
 </foosball-header>
 <div class="container-fluid content-spacer">
     <div class="row">
-        <div class="col-12 col-sm-6 col-md-3 player-card-container" *ngFor="let player of players | async" [routerLink]="['/player-details', player.id]">
+        <div [@enterAnimation] class="col-12 col-sm-6 col-md-3 player-card-container" *ngFor="let player of players | async" [routerLink]="['/player-details', player.id]">
             <mat-card class="player-card">
                 <mat-card-header>
                     <mat-card-title>{{ player.name }}</mat-card-title>
