--- a/src/app/ui/new-game/new-game/new-game.component.html
+++ b/src/app/ui/new-game/new-game/new-game.component.html
@@ -5,14 +5,14 @@
 <div class="container-fluid content-spacer">
     <div class="row">
         <div class="col-12 col-sm-6 col-md-3 player-card-container" *ngFor="let player of players">
-            <mat-card class="player-card">
+            <mat-card class="player-card" [@enterAnimation] [@playerAnimation]="player.team">
                 <div class="row">
                     <div class="col-10">
                         <mat-card-title>{{ player.name }}</mat-card-title>
                         <mat-card-subtitle>Level: {{ player.level }}</mat-card-subtitle>
                     </div>
                     <div class="col-2">
-                        <i class="material-icons done" [@enterAnimation] *ngIf="player.team">done</i>
+                        <i class="material-icons done" *ngIf="player.team">done</i>
                     </div>
                 </div>
                 <img mat-card-image src="{{ player.photo }}">
